[gd_scene load_steps=13 format=3 uid="uid://ce060322cxuqq"]

[ext_resource type="Script" uid="uid://bbg10214bh0q7" path="res://modules/Finish/finish.gd" id="1_uqlg2"]
[ext_resource type="Texture2D" uid="uid://ch2tf1r2ea2m2" path="res://modules/Finish/HouseOff.png" id="2_lekut"]
[ext_resource type="Texture2D" uid="uid://bfye1bxg0437e" path="res://modules/Finish/HouseOn.png" id="3_clxda"]
[ext_resource type="Texture2D" uid="uid://bw6w8rvp37b2e" path="res://modules/Finish/Titelmenu_Feld_1_Auf_gehts.png" id="4_uo7ek"]
[ext_resource type="Texture2D" uid="uid://spti8l666p07" path="res://modules/Finish/Titelmenu_Feld_1_Auf_gehts_1.png" id="5_r2g3b"]
[ext_resource type="Texture2D" uid="uid://csmrvmjfja7tc" path="res://modules/Finish/Titelmenu_Feld_2_Wiederholen.png" id="6_4pw5m"]
[ext_resource type="Texture2D" uid="uid://b7h8xtoal4lp6" path="res://main_menu/Titelmenu_Feld_Beenden_hover.png" id="6_uo7ek"]
[ext_resource type="Texture2D" uid="uid://q5gqjx1j87ej" path="res://modules/Finish/Titelmenu_Feld_2_Wiederholen_ausgewahlt_.png" id="7_h7dts"]
[ext_resource type="Texture2D" uid="uid://cruqukd8qbtoy" path="res://modules/Finish/Titelmenu_Feld_3_Hauptmenu.png" id="8_o8eun"]
[ext_resource type="Texture2D" uid="uid://c5rxfx3pyowrb" path="res://modules/Finish/Titelmenu_Feld_3_Haupmenu_ausgefullt.png" id="9_4momw"]
[ext_resource type="Texture2D" uid="uid://4kvtmpvr8uwu" path="res://main_menu/Titelmenu_Feld_Beenden.png" id="10_r2g3b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qgtd"]
size = Vector2(47, 139)

[node name="Finish" type="Area2D"]
collision_layer = 0
collision_mask = 30
script = ExtResource("1_uqlg2")

[node name="LightsOff" type="Sprite2D" parent="."]
texture = ExtResource("2_lekut")

[node name="LightsOn" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_clxda")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5.5)
shape = SubResource("RectangleShape2D_0qgtd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -136.0
grow_horizontal = 0
grow_vertical = 0

[node name="Next" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_uo7ek")
texture_pressed = ExtResource("5_r2g3b")
texture_hover = ExtResource("5_r2g3b")

[node name="Retry" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_4pw5m")
texture_pressed = ExtResource("7_h7dts")
texture_hover = ExtResource("7_h7dts")

[node name="Menu" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_o8eun")
texture_pressed = ExtResource("9_4momw")
texture_hover = ExtResource("9_4momw")

[node name="Quit" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_r2g3b")
texture_pressed = ExtResource("6_uo7ek")
texture_hover = ExtResource("6_uo7ek")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Next" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
